--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -185,6 +185,65 @@ textarea {
 // }
 
 
+/*========== default checkbox style =============*/
+input[type=checkbox]{
+    display:none;
+}
+input[type=checkbox] + label:before {
+    border: 1px solid rgb(255, 255, 255);
+    content: "";
+    display: inline-block;
+    font-size: 30px;
+    height: 20px;
+    line-height: 11px;
+    margin: -4px 5px 0 0;
+    text-align: center;
+    vertical-align: middle;
+    width: 20px;
+    border-radius: 50%;
+    background-color: #fff;
+}
+input[type=checkbox]:checked + label:before {
+    content: "\f00c";
+    font-family: fontawesome;
+    color: #1d1d1b;
+    font-size: 15px;
+    padding-top: 4px;
+}
+label {
+    margin-right: 10px;
+    font-weight: normal;
+    cursor: pointer;
+}
+/*========== default radio button style =============*/
+input[type=radio]{
+    display:none;
+}
+input[type=radio] + label:before {
+    border: 1px solid rgb(255, 255, 255);
+    content: "";
+    display: inline-block;
+    font-size: 30px;
+    height: 20px;
+    line-height: 11px;
+    margin: -4px 5px 0 0;
+    text-align: center;
+    vertical-align: middle;
+    width: 20px;
+    border-radius: 50%;
+    background-color: #fff;
+}
+input[type=radio]:checked + label:before {
+    content: "\f00c";
+    font-family: fontawesome;
+    color: #0F4A6E;
+    font-size: 15px;
+    padding-top: 4px;
+}
+label{
+    @extend %body-color;
+}
+
 
 
 
